--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ function formatDate(dateStr: string): string {
       <div class="hero-content">
         <div class="profile-image-wrapper">
           <Image
-            src="/images/jonny.jpg"
+            src="/images/profile.jpg"
             alt={`Profile photo of ${introData.name}`}
             width={234}
             height={234}
