--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import SkillTag from '../components/SkillTag.astro';
 import SkillsRadar from '../components/SkillsRadar.astro';
 import MagneticContactCarousel from '../components/MagneticContactCarousel.astro';
 import PodcastPlayer from '../components/PodcastPlayer.astro';
+import LinkedInBadge from '../components/LinkedInBadge.astro';
 import { Image } from 'astro:assets';
 
 // Import English content data only
@@ -329,7 +330,7 @@ function formatDate(dateStr: string): string {
       <p>I'm currently looking for new opportunities. Feel free to reach out!</p>
 
       <div class="linkedin-badge-wrapper">
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="johannes-tauscher" data-version="v1">
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="johannes-tauscher" data-version="v1">
           <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/johannes-tauscher?trk=profile-badge">Johannes Tauscher</a>
         </div>
       </div>
